--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -1,3 +1,5 @@
+/* Problem Set 1 - Fictional Character */
+
 body {
     font-size: 16px;
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
